Add simple logo

--- a/web/src/App.styles.scss
+++ b/web/src/App.styles.scss
@@ -8,6 +8,11 @@ body {
     font-size: 1rem;
 }
 
+.app-logo {
+    width: 1em;
+    float: left;
+}
+
 .app-nav {
     height: 2em;
     font-size: 2em;
