Add remove bookmark functioniality

--- a/web/src/styles/App.styles.scss
+++ b/web/src/styles/App.styles.scss
@@ -39,6 +39,18 @@ body {
     }
 }
 
+.btn-primary {
+    background-color: $horizon;
+
+    &:hover {
+        background-color: $elephant;
+    }
+}
+
+.card-link {
+    color: $horizon;
+}
+
 /* Set the color of the icon */
 svg path, svg rect{
     fill: #FF6700;
