--- a/web/src/app/index.html
+++ b/web/src/app/index.html
@@ -4,6 +4,7 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
           crossorigin="anonymous">
+    <script src="https://cdn.auth0.com/js/auth0/9.5.1/auth0.min.js"></script>
 </head>
 <body>
 <span id="root"></span>
